# FasApi-template

./: .gitignore  .pdm-python  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  sonar-project.properties  tox.ini
CSVsaves/: 13_11_2024.csv  14_11_2024.csv  works.csv  works_2024-11-11.csv
JSONsaves/: 13_11_2024.json  W144423133.json  W2117692326.json  W2117692326_2024-11-11.json  W2167279371.json  W2502170112.json  W2502170112_2024-11-11.json  json.json
src/: config.py  server.py
src/models/: result.py  valid_type_request.py
src/utils/: api_calls.py  greeting.py  save_fun.py
